# cargo-cartesi

./: Cargo.toml  Readme.md
.github/workflows/: build.yml
cargo-cartesi/: Cargo.toml
cargo-cartesi/src/: app.rs  main.rs
cargo-cartesi/src/cli/: app.rs  build.rs  create_fs.rs  create_machine.rs  mod.rs  new.rs  run.rs
cargo-cartesi/src/commands/: build.rs  create_fs.rs  create_machine.rs  mod.rs  new.rs  run.rs
cargo-cartesi/src/services/: interface.rs  mod.rs
cargo-cartesi/src/services/docker/: cartesi_machine.rs  mod.rs
cargo-cartesi/src/services/host/: cargo.rs  cartesi_machine.rs  dependencies.rs  file_system.rs  mod.rs  resources.rs
cartesi-macros/: Cargo.toml
cartesi-rollups/: Cargo.toml
cartesi-rollups-bindings/: Cargo.toml
cartesi-rollups-bindings/src/: bindings.rs
cartesi-rollups-dapp/: Cargo.toml
cartesi-rollups-dapp/src/: dapp.rs  lib.rs
cartesi-rollups-evm-utils/: Cargo.toml
cartesi-rollups-http/: Cargo.toml
cartesi-rollups-http/src/: http.rs  lib.rs
cartesi-rollups-linux/: Cargo.toml  build.rs
cartesi-rollups-linux-test/: Cargo.toml
cartesi-rollups-linux/src/: conversions.rs  lib.rs  machine.rs  rollups.rs
cartesi-rollups-linux/src/rollup/: bindings.c  bindings.rs  mod.rs  native_bindings.rs
cartesi-rollups-test/: Cargo.toml
cartesi-rollups-test-doubles/: Cargo.toml
cartesi-rollups-test-doubles/src/: lib.rs
cartesi-rollups-test/src/: faker.rs  lib.rs  tester.rs
cartesi-rollups/src/: http.rs  lib.rs  rollups.rs
examples/echo/: Cargo.toml
examples/echo/src/: lib.rs  main.rs
examples/echo/tests/: writing_input_echoes_notice.rs  writing_query_echoes_report.rs
examples/one-shot/: Cargo.toml
one-shot/: Cargo.toml  Dockerfile
one-shot/src/: main.rs
stoopid/: Cargo.toml  Dockerfile
stoopid/src/: main.rs
