[package]
name = "cargo-cartesi"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
thiserror = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
sha1 = "0.10"
hex-literal = "0.3"
figment = { version = "0.10", features = ["toml", "env"] }
