[package]
name = "cargo-cartesi"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
figment = { version = "0.10", features = ["toml", "env"] }
hex-literal = "0.3"
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
thiserror = "1"
toml = "0.5"
users = "0.11"
