[package]
name = "cartesi-rollups-linux"
version = "0.1.0"
edition = "2021"

[dependencies]
cartesi-rollups = { path = "../cartesi-rollups" }
cartesi-rollups-bindings = { path = "../cartesi-rollups-bindings" }
hex = "0.4"
log = "0.4"
nix = "0.26"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
