[package]
name = "cartesi-rollups-test"
version = "0.1.0"
edition = "2021"

[dependencies]
cartesi-rollups = { path = "../cartesi-rollups" }
serde_json = { version = "1", default-features = false, features = ["std"] }
thiserror = { version = "1", optional = true }

[features]
default = []
integration = []
unit = ["thiserror"]
