[package]
name = "echo"
version = "0.1.0"
edition = "2021"

[dependencies]
cartesi-rollups-linux = { path = "../../cartesi-rollups-linux" }
env_logger = "0.9"

[dev-dependencies]
cartesi-rollups-test-doubles = { path = "../../cartesi-rollups-test-doubles" }
cartesi-rollups-test = { path = "../../cartesi-rollups-test" }
